--- a/test.html
+++ b/test.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html>
+<link rel=stylesheet href="style.css">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-<div>dasom-yoon</div>
+
+
+<header class="major">
+    <div class="major2 clearfix">
+        <div class="menu"><img src="menu.svg"></div>
+        <div class="logo"><img src="logo.svg"></div>
+        <div class="profile"><img src="profile.svg"></div>
+    </div>
+
+<div class="container">
+    <div class="box one">
+        <div class="onehover">
+            <div class="title"><span class="titlefont"> petfit </span></div>
+            <div class="category"><span class="categoryfont">app design </span> </div>
+
+        </div>
+    </div>
+    <div class="box two"></div>
+    <div class="box three"></div>
+    <div class="box four"></div>
+    <div class="box five"></div>
+    <div class="box six"></div>
+    <div class="box seven"></div>
+    <div class="box eight"></div>
+
+
+
+</div>
+
+
+
+
+</header>
+
+
+
+
 </body>
 </html>
