첫번째 푸시

--- a/index.html
+++ b/index.html
@@ -10,34 +10,122 @@
 
 <header class="major">
     <div class="major2 clearfix">
-        <div class="menu"><img src="menu.svg"></div>
-        <div class="logo"><img src="logo.svg"></div>
+        <div class="menu"><a href="index.html"><img src="menu.svg"></a></div>
+        <div class="logo"><a href="index.html"><img src="logo.svg"></a></div>
         <div class="profile"><img src="profile.svg"></div>
     </div>
 
-<div class="container">
-    <div class="box one">
-        <div class="onehover">
-            <div class="title"><span class="titlefont"> petfit </span></div>
-            <div class="category"><span class="categoryfont">app design </span> </div>
 
-        </div>
+</header>
+<section>
+<div class="container">
+
+
+
+    <div class="box one">
+        <a href="petfit.html">
+        <div class="onehover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> petfit </span></div>
+                <div><span class="categoryfont">app design </span> </div>
+            </div>
+
+        </div></a>
     </div>
-    <div class="box two"></div>
-    <div class="box three"></div>
-    <div class="box four"></div>
-    <div class="box five"></div>
+
+
+
+
+
+    <div class="box two">
+        <a href="mari.html">
+        <div class="twohover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> mari </span></div>
+                <div><span class="categoryfont">app design </span> </div>
+            </div>
+
+        </div></a>
+    </div>
+
+
+
+    <div class="box three">
+        <a href="movit.html">
+        <div class="threehover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> movit </span></div>
+                <div><span class="categoryfont">app design </span> </div>
+            </div>
+
+        </div></a>
+
+    </div>
+
+
+
+    <div class="box four">
+        <a href="dasom.html">
+        <div class="fourhover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> dasom </span></div>
+                <div><span class="categoryfont">web / branding </span> </div>
+            </div>
+
+        </div></a>
+
+    </div>
+
+
+
+    <div class="box five">
+        <a href="sopoong.html">
+        <div class="fivehover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> sopoong in seoul </span></div>
+                <div><span class="categoryfont">app / branding </span> </div>
+            </div>
+
+
+        </div></a>
+
+    </div>
+
+
+
     <div class="box six"></div>
-    <div class="box seven"></div>
-    <div class="box eight"></div>
+
+
+
+    <div class="box seven">
+        <a href="gvideo.html">
+        <div class="sevenhover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> gvideo </span></div>
+                <div><span class="categoryfont">motion graphic </span> </div>
+            </div>
+
+        </div></a>
+    </div>
+
+
+
+    <div class="box eight">
+        <a href="dasomis.html">
+        <div class="eighthover x-align-middle">
+            <div class="x-align-block test">
+                <div><span class="titlefont"> dasom is </span></div>
+                <div><span class="categoryfont">motion graphic </span> </div>
+            </div>
+
+        </div></a>
+    </div>
 
 
 </div>
 
+</section>
 
-
-
-</header>
 
 
 
