--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 <section>
 <div class="container">
 
-
-
     <div class="box one">
         <a href="petfit.html">
         <div class="onehover x-align-middle">
@@ -34,7 +32,7 @@
     </div>
 
 
-
+<div></div>
 
 
     <div class="box two">
