--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <header class="major">
     <div class="major2 clearfix">
-        <div class="menu"><a href="index.html"><img src="menu.svg"></a></div>
-        <div class="logo"><a href="index.html"><img src="logo.svg"></a></div>
-        <div class="profile"><img src="profile.svg"></div>
+        <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+        <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+        <div class="profile"><img src="images/profile.svg"></div>
     </div>
 
 
