--- a/sopoong.html
+++ b/sopoong.html
@@ -3,9 +3,9 @@
 
 <header class="major">
     <div class="major2 clearfix">
-        <div class="menu"><a href="index.html"><img src="menu.svg"></a></div>
-        <div class="logo"><a href="index.html"><img src="logo.svg"></a></div>
-        <div class="profile"><img src="profile.svg"></div>
+        <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+        <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+        <div class="profile"><img src="images/profile.svg"></div>
     </div>
 
 
@@ -24,7 +24,7 @@
 
 
 <body>
-<div class="left"><a href="dasom.html"><img src="left.svg"></a></div>
+<div class="left"><a href="dasom.html"><img src="images/left.svg"></a></div>
 
 <div class="details">
     <div class="detail1">
@@ -42,5 +42,5 @@
 </div>
 <div class="works"></div>
 <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-<div class="right"><a href="gvideo.html"><img src="right.svg"></a></div>
+<div class="right"><a href="gvideo.html"><img src="images/right.svg"></a></div>
 </body>
