--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,42 @@
-<!DOCTYPE html>
-<html>
+
+<link rel=stylesheet href="style.css">
+
 <head lang="ko">
     <meta charset="UTF-8">
     <title></title>
+
+
 </head>
+
+
+
 <body>
 
-<div class="container">
-    <div class="profile1">name</div>
-    <div class="profile2">nmae</div>
+
+<div class="profiledetail">
+    <div class="profile1">
+
+
+    </div>
+    <div class="profile2">
+
+        <span class="profiletext">윤다솜   </span> <span class="profiletext2"> dasom yoon </span>
+        <p>
+        <span class="detailtext">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.
+UI / UX  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,
+관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.
+그 외에도 BRANDING / MOTION GRAPHIC 분야 프로젝트 또한 재미있게 작업하고 있다.
+나를 주제로 브랜딩 작업을 하고, 그 아이덴티티를 바탕으로 모션그래픽 영상을 제작하기도 했다.
+아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span>
+
+
+        <p>
+        <img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p>
+        <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
+        <img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p>
+        </p>
+    </div>
+
 </div>
+
 </body>
-</html>
