--- a/index.html
+++ b/index.html
@@ -6,127 +6,263 @@
     <title></title>
 </head>
 <body>
+<div class="x-com">
+    <header class="major">
+        <div class="major2 clearfix">
+            <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+            <div class="profile"><img src="images/profile.svg"></div>
+        </div>
 
 
-<header class="major">
-    <div class="major2 clearfix">
-        <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
-        <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
-        <div class="profile"><img src="images/profile.svg"></div>
-    </div>
+    </header>
+    <section>
+        <div class="container">
 
+            <div class="box one">
+                <a href="petfit.html">
+                    <div class="onehover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> petfit </span></div>
+                            <div><span class="categoryfont">app design </span> </div>
+                        </div>
 
-</header>
-<section>
-<div class="container">
-
-    <div class="box one">
-        <a href="petfit.html">
-        <div class="onehover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> petfit </span></div>
-                <div><span class="categoryfont">app design </span> </div>
-            </div>
-
-        </div></a>
-    </div>
-
-
-<div></div>
-
-
-    <div class="box two">
-        <a href="mari.html">
-        <div class="twohover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> mari </span></div>
-                <div><span class="categoryfont">app design </span> </div>
-            </div>
-
-        </div></a>
-    </div>
-
-
-
-    <div class="box three">
-        <a href="movit.html">
-        <div class="threehover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> movit </span></div>
-                <div><span class="categoryfont">app design </span> </div>
-            </div>
-
-        </div></a>
-
-    </div>
-
-
-
-    <div class="box four">
-        <a href="dasom.html">
-        <div class="fourhover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> dasom </span></div>
-                <div><span class="categoryfont">web / branding </span> </div>
-            </div>
-
-        </div></a>
-
-    </div>
-
-
-
-    <div class="box five">
-        <a href="sopoong.html">
-        <div class="fivehover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> sopoong in seoul </span></div>
-                <div><span class="categoryfont">app / branding </span> </div>
+                    </div></a>
             </div>
 
 
-        </div></a>
-
-    </div>
+            <div></div>
 
 
+            <div class="box two">
+                <a href="mari.html">
+                    <div class="twohover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> mari </span></div>
+                            <div><span class="categoryfont">app design </span> </div>
+                        </div>
 
-    <div class="box six"></div>
-
-
-
-    <div class="box seven">
-        <a href="gvideo.html">
-        <div class="sevenhover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> gvideo </span></div>
-                <div><span class="categoryfont">motion graphic </span> </div>
+                    </div></a>
             </div>
 
-        </div></a>
-    </div>
 
 
+            <div class="box three">
+                <a href="movit.html">
+                    <div class="threehover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> movit </span></div>
+                            <div><span class="categoryfont">app design </span> </div>
+                        </div>
 
-    <div class="box eight">
-        <a href="dasomis.html">
-        <div class="eighthover x-align-middle">
-            <div class="x-align-block test">
-                <div><span class="titlefont"> dasom is </span></div>
-                <div><span class="categoryfont">motion graphic </span> </div>
+                    </div></a>
+
             </div>
 
-        </div></a>
-    </div>
+
+
+            <div class="box four">
+                <a href="dasom.html">
+                    <div class="fourhover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> dasom </span></div>
+                            <div><span class="categoryfont">web / branding </span> </div>
+                        </div>
+
+                    </div></a>
+
+            </div>
+
+
+
+            <div class="box five">
+                <a href="sopoong.html">
+                    <div class="fivehover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> sopoong in seoul </span></div>
+                            <div><span class="categoryfont">app / branding </span> </div>
+                        </div>
+
+
+                    </div></a>
+
+            </div>
+
+
+
+            <div class="box six"></div>
+
+
+
+            <div class="box seven">
+                <a href="gvideo.html">
+                    <div class="sevenhover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> gvideo </span></div>
+                            <div><span class="categoryfont">motion graphic </span> </div>
+                        </div>
+
+                    </div></a>
+            </div>
+
+
+
+            <div class="box eight">
+                <a href="dasomis.html">
+                    <div class="eighthover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> dasom is </span></div>
+                            <div><span class="categoryfont">motion graphic </span> </div>
+                        </div>
+
+                    </div></a>
+            </div>
+
+
+        </div>
+
+    </section>
+
+
 
 
 </div>
 
-</section>
+
+
+
+
+
+
+<div class="x-mobile">
+
+    <header class="major">
+        <div class="major2 clearfix">
+            <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+            <div class="profile"><img src="images/profile.svg"></div>
+        </div>
+
+
+    </header>
+    <section>
+        <div class="container">
+
+            <div class="box one">
+                <a href="petfit.html">
+                    <div class="onehover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> petfit </span></div>
+                            <div><span class="categoryfont">app design </span> </div>
+                        </div>
+
+                    </div></a>
+            </div>
+
+
+            <div></div>
+
+
+            <div class="box two">
+                <a href="mari.html">
+                    <div class="twohover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> mari </span></div>
+                            <div><span class="categoryfont">app design </span> </div>
+                        </div>
+
+                    </div></a>
+            </div>
+
+
+
+            <div class="box three">
+                <a href="movit.html">
+                    <div class="threehover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> movit </span></div>
+                            <div><span class="categoryfont">app design </span> </div>
+                        </div>
+
+                    </div></a>
+
+            </div>
+
+
+
+            <div class="box four">
+                <a href="dasom.html">
+                    <div class="fourhover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> dasom </span></div>
+                            <div><span class="categoryfont">web / branding </span> </div>
+                        </div>
+
+                    </div></a>
+
+            </div>
+
+
+
+            <div class="box five">
+                <a href="sopoong.html">
+                    <div class="fivehover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> sopoong in seoul </span></div>
+                            <div><span class="categoryfont">app / branding </span> </div>
+                        </div>
+
+
+                    </div></a>
+
+            </div>
+
+
+
+            <div class="box six"></div>
+
+
+
+            <div class="box seven">
+                <a href="gvideo.html">
+                    <div class="sevenhover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> gvideo </span></div>
+                            <div><span class="categoryfont">motion graphic </span> </div>
+                        </div>
+
+                    </div></a>
+            </div>
+
+
+
+            <div class="box eight">
+                <a href="dasomis.html">
+                    <div class="eighthover x-align-middle">
+                        <div class="x-align-block test">
+                            <div><span class="titlefont"> dasom is </span></div>
+                            <div><span class="categoryfont">motion graphic </span> </div>
+                        </div>
+
+                    </div></a>
+            </div>
+
+
+        </div>
+
+    </section>
+
+
+
+
+</div>
+
 
 
 
 
 
 </body>
+
+
 </html>
