--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="box one">
                 <a href="petfit.html">
                     <div class="onehover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> petfit </span></div>
                             <div><span class="categoryfont">app design </span> </div>
                         </div>
@@ -37,7 +37,7 @@
             <div class="box two">
                 <a href="mari.html">
                     <div class="twohover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> mari </span></div>
                             <div><span class="categoryfont">app design </span> </div>
                         </div>
@@ -50,7 +50,7 @@
             <div class="box three">
                 <a href="movit.html">
                     <div class="threehover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> movit </span></div>
                             <div><span class="categoryfont">app design </span> </div>
                         </div>
@@ -64,7 +64,7 @@
             <div class="box four">
                 <a href="dasom.html">
                     <div class="fourhover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom </span></div>
                             <div><span class="categoryfont">web / branding </span> </div>
                         </div>
@@ -78,7 +78,7 @@
             <div class="box five">
                 <a href="sopoong.html">
                     <div class="fivehover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> sopoong in seoul </span></div>
                             <div><span class="categoryfont">app / branding </span> </div>
                         </div>
@@ -97,7 +97,7 @@
             <div class="box seven">
                 <a href="gvideo.html">
                     <div class="sevenhover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> gvideo </span></div>
                             <div><span class="categoryfont">motion graphic </span> </div>
                         </div>
@@ -110,7 +110,7 @@
             <div class="box eight">
                 <a href="dasomis.html">
                     <div class="eighthover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom is </span></div>
                             <div><span class="categoryfont">motion graphic </span> </div>
                         </div>
@@ -151,12 +151,12 @@
             <div class="box one">
                 <a href="petfit.html">
                     <div class="onehover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> petfit </span></div>
-                            <div><span class="categoryfont">app design </span> </div>
+                            <div><span class="categoryfont">app design</span></div>
                         </div>
-
-                    </div></a>
+                    </div>
+                </a>
             </div>
 
 
@@ -166,7 +166,7 @@
             <div class="box two">
                 <a href="mari.html">
                     <div class="twohover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> mari </span></div>
                             <div><span class="categoryfont">app design </span> </div>
                         </div>
@@ -179,7 +179,7 @@
             <div class="box three">
                 <a href="movit.html">
                     <div class="threehover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> movit </span></div>
                             <div><span class="categoryfont">app design </span> </div>
                         </div>
@@ -193,7 +193,7 @@
             <div class="box four">
                 <a href="dasom.html">
                     <div class="fourhover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom </span></div>
                             <div><span class="categoryfont">web / branding </span> </div>
                         </div>
@@ -207,7 +207,7 @@
             <div class="box five">
                 <a href="sopoong.html">
                     <div class="fivehover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> sopoong in seoul </span></div>
                             <div><span class="categoryfont">app / branding </span> </div>
                         </div>
@@ -219,14 +219,14 @@
 
 
 
-            <div class="box six"></div>
+            <!--<div class="box six"></div>-->
 
 
 
             <div class="box seven">
                 <a href="gvideo.html">
                     <div class="sevenhover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> gvideo </span></div>
                             <div><span class="categoryfont">motion graphic </span> </div>
                         </div>
@@ -239,7 +239,7 @@
             <div class="box eight">
                 <a href="dasomis.html">
                     <div class="eighthover x-align-middle">
-                        <div class="x-align-block test">
+                        <div class="x-align-block text-padding">
                             <div><span class="titlefont"> dasom is </span></div>
                             <div><span class="categoryfont">motion graphic </span> </div>
                         </div>
@@ -260,9 +260,10 @@
 
 
 
-
-
 </body>
+
+
+
 
 
 </html>
