--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel=stylesheet href="style.css">
+<link rel=stylesheet href="reset.css">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
@@ -90,8 +91,6 @@
 
 
 
-            <div class="box six"></div>
-
 
 
             <div class="box seven">
@@ -139,8 +138,8 @@
     <header class="major">
         <div class="major2 clearfix">
             <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
-            <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
-            <div class="profile"><img src="images/profile.svg"></div>
+            <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
+            <div class="profile"><img src="images/profile2.svg"></div>
         </div>
 
 
