--- a/movit.html
+++ b/movit.html
@@ -1,6 +1,6 @@
 
 <link rel=stylesheet href="style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <header class="major">
     <div class="major2 clearfix">
         <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
