--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 
 <link rel=stylesheet href="style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head lang="ko">
     <meta charset="UTF-8">
     <title></title>
