--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                 </a>
             </div>
 
+            <div class="box six"></div>
+            <div class="box nine"></div>
+            <div class="box ten"></div>
+
 
         </div>
 
@@ -215,7 +219,7 @@
             </div> </a>
 
 
-            <!--<div class="box six"></div>-->
+
 
 
             <a href="gvideo.html">
@@ -244,6 +248,9 @@
                     </div>
 
              </div> </a>
+
+
+
 
 
         </div>
