--- a/gvideo.html
+++ b/gvideo.html
@@ -1,4 +1,4 @@
-
+<html>
 <link rel=stylesheet href="style.css">
 <link rel=stylesheet href="reset.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,3 +45,5 @@
 <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
 <div class="right"><a href="dasomis.html"><img src="images/right.svg"></a></div>
 </body>
+
+</html>
