--- a/petfit.html
+++ b/petfit.html
@@ -1,6 +1,7 @@
-
+<html>
 <link rel=stylesheet href="style.css">
 <link rel=stylesheet href="reset.css">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <header class="major">
     <div class="major2 clearfix">
@@ -45,3 +46,5 @@
 <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
 <div class="right"><a href="mari.html"><img src="images/right.svg"></a></div>
 </body>
+
+</html>
