--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <link rel=stylesheet href="style.css">
-<link rel=stylesheet href="reset.css">
+<!--<link rel=stylesheet href="reset.css">-->
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
