--- a/movit.html
+++ b/movit.html
@@ -2,12 +2,7 @@
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<header class="major">
-    <div class="major2 clearfix">
-        <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
-        <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
-        <div class="profile"><img src="images/profile.svg"></div>
-    </div>
+
 
 
 
@@ -22,27 +17,67 @@
 
 </head>
 
+<div class="x-com">
+    <header class="major">
+        <div class="major2 clearfix">
+            <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+            <div class="profile"><img src="images/profile.svg"></div>
+        </div>
+    </header>
 
-
-<body>
-<div class="left"><a href="mari.html"><img src="images/left.svg"></a></div>
-
-<div class="details">
-    <div class="detail1">
-        <span class="detailtitle">movit</span><p>
+    <div class="left"><a href="mari.html"><img src="images/left.svg"></a></div>
+    <div class="details">
+        <div class="detail1">
+            <span class="detailtitle">movit</span><p>
         <span class="detailcategory">
             mobile app <br> 2013.11-2013.12
         </span>
-        <div class="people3">  </div>
+            <div class="people3">  </div>
+
+        </div>
+        <div class="detail2">
+            <span class="detailtext">포트폴리오 작품설명 </span>
+        </div>
 
     </div>
-    <div class="detail2">
-        <span class="detailtext">포트폴리오 작품설명 </span>
+
+    <div class="works"></div>
+    <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
+    <div class="right"><a href="dasom.html"><img src="images/right.svg"></a></div>
+</div>
+
+
+
+<div class="x-mobile">
+
+    <header class="major">
+        <div class="major2 clearfix">
+            <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
+            <div class="profile"><img src="images/profile2.svg"></div>
+        </div></header>
+
+    <div class="details">
+        <div class="detail1">
+            <span class="detailtitle">movit</span><p>
+        <span class="detailcategory">
+            mobile app <br> 2013.11-2013.12
+        </span>
+            <div class="people3">  </div>
+
+        </div>
+        <div class="detail2">
+            <span class="detailtext">포트폴리오 작품설명</span>
+        </div>
+
+
     </div>
+
+    <div class="works"></div>
 
 </div>
-<div class="works"></div>
-<div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-<div class="right"><a href="dasom.html"><img src="images/right.svg"></a></div>
+
+
 </body>
 </html>
