--- a/gvideo.html
+++ b/gvideo.html
@@ -2,48 +2,86 @@
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<header class="major">
-    <div class="major2 clearfix">
-        <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
-        <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
-        <div class="profile"><img src="images/profile.svg"></div>
-    </div>
 
 
 
 
 
-</header>
+
 
 <head lang="ko">
     <meta charset="UTF-8">
-    <title></title>
-
-
-</head>
+    <title></title> </head>
 
 
 
-<body>
-<div class="left"><a href="sopoong.html"><img src="images/left.svg"></div>
+<div class="x-com">
+    <header class="major">
+        <div class="major2 clearfix">
+            <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+            <div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>
+        </div>
+    </header>
 
-<div class="details">
-    <div class="detail1">
-        <span class="detailtitle">gvideo</span><p>
+    <div class="left"><a href="whoop.html"><img src="images/left.svg"></a></div>
+    <div class="details">
+        <div class="detail1">
+            <span class="detailtitle">gvideo</span><p>
         <span class="detailcategory">
-            motion graphic <br> 2013.11-2014.02
+               motion graphic <br> 2013.01-2013.03
         </span>
-        <div class="people">  </div>
+            <div class="people">  </div>
+
+        </div>
+        <div class="detail2">
+            <span class="detailtext">포트폴리오 작품설명 </span>
+        </div>
 
     </div>
-    <div class="detail2">
-        <span class="detailtext">포트폴리오 작품설명 </span>
+
+    <div class="works"></div>
+    <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
+    <div class="right"><a href="dasom.html"><img src="images/right.svg"></a></div>
+</div>
+
+
+
+<div class="x-mobile">
+
+    <header class="major">
+        <div class="major2 clearfix">
+            <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
+            <div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>
+        </div></header>
+
+    <div class="details">
+        <div class="detail1">
+            <span class="detailtitle">gvideo</span><p>
+
+
+             <span class="detailcategory">
+            motion graphic <br> 2013.01-2013.03
+        </span>
+
+
+
+            <div class="people">  </div>
+
+        </div>
     </div>
+
+
+    <div class="detail2_m">
+        <span class="detailtext">포트폴리오 작품설명</span>
+    </div>
+
+
+    <div class="works2"></div>
 
 </div>
-<div class="works"></div>
-<div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-<div class="right"><a href="dasomis.html"><img src="images/right.svg"></a></div>
-</body>
 
+
+</body>
 </html>
