--- a/movit.html
+++ b/movit.html
@@ -8,25 +8,23 @@
 
 
 
-</header>
 
 <head lang="ko">
     <meta charset="UTF-8">
-    <title></title>
+    <title></title> </head>
 
 
-</head>
 
 <div class="x-com">
     <header class="major">
         <div class="major2 clearfix">
             <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
             <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
-            <div class="profile"><img src="images/profile.svg"></div>
+            <div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>
         </div>
     </header>
 
-    <div class="left"><a href="mari.html"><img src="images/left.svg"></a></div>
+    <div class="left"><a href="whoop.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
             <span class="detailtitle">movit</span><p>
@@ -55,26 +53,32 @@
         <div class="major2 clearfix">
             <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
             <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
-            <div class="profile"><img src="images/profile2.svg"></div>
+            <div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>
         </div></header>
 
     <div class="details">
         <div class="detail1">
             <span class="detailtitle">movit</span><p>
-        <span class="detailcategory">
+
+
+             <span class="detailcategory">
             mobile app <br> 2013.11-2013.12
         </span>
+
+
+
             <div class="people3">  </div>
 
         </div>
-        <div class="detail2">
-            <span class="detailtext">포트폴리오 작품설명</span>
-        </div>
-
-
     </div>
 
-    <div class="works"></div>
+
+    <div class="detail2_m">
+        <span class="detailtext">포트폴리오 작품설명</span>
+    </div>
+
+
+    <div class="works2"></div>
 
 </div>
 
