--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html>
 
@@ -14,7 +17,7 @@
         <div class="major2 clearfix">
             <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
             <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
-            <div class="profile"><img src="images/profile.svg"></div>
+            <div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>
         </div>
 
 
@@ -39,10 +42,10 @@
 
 
             <div class="box two">
-                <a href="mari.html">
+                <a href="whoop.html">
                     <div class="twohover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> mari </span></div>
+                            <div><span class="titlefont"> whoop </span></div>
                             <div><span class="categoryfont">app design </span></div>
                         </div>
 
@@ -138,7 +141,7 @@
         <div class="major2 clearfix">
             <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
             <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
-            <div class="profile"><img src="images/profile2.svg"></div>
+            <div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>
         </div>
 
 
@@ -161,7 +164,7 @@
             <div></div>
 
 
-            <a href="mari.html">
+            <a href="whoop.html">
                 <div class="box two">
                     <div class="twohover x-align-middle">
                         <div class="x-align-block text-padding">
