--- a/whoop.html
+++ b/whoop.html
@@ -24,10 +24,10 @@
         </div>
     </header>
 
-    <div class="left"><a href="dasomis.html"><img src="images/left.svg"></a></div>
+    <div class="left"><a href="petfit.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">petfit</span><p>
+            <span class="detailtitle">whoop</span><p>
         <span class="detailcategory">
             mobile app <br> 2014.09-2015.01
         </span>
@@ -42,7 +42,7 @@
 
     <div class="works"></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
-    <div class="right"><a href="whoop.html"><img src="images/right.svg"></a></div>
+    <div class="right"><a href="movit.html"><img src="images/right.svg"></a></div>
 </div>
 
 
@@ -58,7 +58,7 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">petfit</span><p>
+            <span class="detailtitle">whoop</span><p>
 
 
              <span class="detailcategory">
