--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<p style="text-align:justify; width:200">
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <head lang="en">
@@ -35,15 +35,15 @@
                 <span class="profiletext">윤다솜   </span> <span class="profiletext2"> dasom yoon </span><p>
 
 
-                <span class="detailtext">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.
+                <span class="detailtext2">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.
 UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,
 관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.
 그 외에 브랜딩과 모션그래픽 분야 프로젝트 또한 재미있게 작업하고 있다.
-아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span>
+아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span> <p>
 
 
 
-                <p><p></p>
+                <p><p><p>
                     <img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p>
                 <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
                 <img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p>
@@ -190,7 +190,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
                 <span class="profiletext">윤다솜   </span> <span class="profiletext2"> dasom yoon </span>
                 <p>
-        <span class="detailtext">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.
+        <span class="detailtext2">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.
 UI / UX  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,
 관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.
 그 외에도 BRANDING / MOTION GRAPHIC 분야 프로젝트 또한 재미있게 작업하고 있다.
