--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -48,9 +49,9 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
 
                 <p><p><p>
-                <a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p></a>
+                <div class="mail"><a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span><p></a></div>
                 <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
-                <a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a>
+                <div class="resume"><a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a></div>
             </p>
             </div>
 
@@ -188,157 +189,157 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
 
             </div>
             <div class="profile2">
-            <div class="profilebox">
+                <div class="profilebox">
 
 
 
-                <span class="profiletext">윤다솜   </span> <span class="profiletext2"> dasom yoon </span>
-                <p>
-        <!--<span class="detailtext2">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.-->
-<!--UI / UX  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,-->
-<!--관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.-->
-<!--그 외에도 BRANDING / MOTION GRAPHIC 분야 프로젝트 또한 재미있게 작업하고 있다.-->
-<!--나를 주제로 브랜딩 작업을 하고, 그 아이덴티티를 바탕으로 모션그래픽 영상을 제작하기도 했다.-->
-<!--아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span>-->
+                    <span class="profiletext">윤다솜   </span> <span class="profiletext2"> dasom yoon </span>
+                    <p>
+                        <!--<span class="detailtext2">시각디자인학과를 전공했고 전공 분야에 항상 긍정적인 자세로 즐겁게 작업한다.-->
+                        <!--UI / UX  디자인에 관심이 많아 학교 수업 외에 창업 동아리에서 활동하며 앱 디자인 작업을 하고,-->
+                        <!--관련 분야의 공모전이나 산학 프로젝트 등에도 참여하는 등 항상 열정적인 자세로 임하고 있다.-->
+                        <!--그 외에도 BRANDING / MOTION GRAPHIC 분야 프로젝트 또한 재미있게 작업하고 있다.-->
+                        <!--나를 주제로 브랜딩 작업을 하고, 그 아이덴티티를 바탕으로 모션그래픽 영상을 제작하기도 했다.-->
+                        <!--아기자기하고 귀여운 그래픽들을 좋아하고 작업 또한 나의 색깔을 담아서 진행하고 있다. </span>-->
 
 
-                <p>
-
-
-
-            </div>
+                    <p>
 
 
 
-            <div class="profilebox2">
-
-
-                <a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span></a><p>
-                <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
-                <a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a>
-            </p>
-
-
-
-
-
-            </div>
-
-        </div>
-
-
-
-
-        <div class="container">
-            <a href="petfit.html">
-                <div class="box one">
-
-                    <div class="onehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> petfit </span></div>
-                            <div><span class="categoryfont">app design</span></div>
-                        </div>
-                    </div>
                 </div>
-            </a>
 
 
-            <div></div>
+
+                <div class="profilebox2">
 
 
-            <a href="whoop.html">
-                <div class="box two">
-                    <div class="twohover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> mari </span></div>
-                            <div><span class="categoryfont">app design </span></div>
+                    <a href="mailto:dasom2yoon@gmail.com"><img src="images/mail.svg"><span class="profiletext3">dasom2yoon@gmail.com</span></a><p>
+                    <img src="images/phone.svg"><span class="profiletext3">+ 82 0 2535 0813</span><p>
+                    <a href="resume.pdf"><img src="images/resume.svg"><span class="profiletext3">DOWNLOAD RESUME</span><p></p></a>
+                </p>
+
+
+
+
+
+                </div>
+
+            </div>
+
+
+
+
+            <div class="container">
+                <a href="petfit.html">
+                    <div class="box one">
+
+                        <div class="onehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> petfit </span></div>
+                                <div><span class="categoryfont">app design</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+
+                <div></div>
+
+
+                <a href="whoop.html">
+                    <div class="box two">
+                        <div class="twohover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> mari </span></div>
+                                <div><span class="categoryfont">app design </span></div>
+                            </div>
+
                         </div>
 
-                    </div>
-
-                </div> </a>
+                    </div> </a>
 
 
-            <a href="movit.html">
-                <div class="box three">
+                <a href="movit.html">
+                    <div class="box three">
 
-                    <div class="threehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> movit </span></div>
-                            <div><span class="categoryfont">app design </span></div>
-                        </div>
+                        <div class="threehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> movit </span></div>
+                                <div><span class="categoryfont">app design </span></div>
+                            </div>
 
-                    </div>
-
-
-                </div> </a>
-
-
-            <a href="dasom.html">
-                <div class="box four">
-
-                    <div class="fourhover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom </span></div>
-                            <div><span class="categoryfont">web / branding </span></div>
-                        </div>
-
-                    </div>
-
-
-                </div> </a>
-
-
-            <a href="sopoong.html">
-                <div class="box five">
-
-                    <div class="fivehover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> sopoong in seoul </span></div>
-                            <div><span class="categoryfont">app / branding </span></div>
                         </div>
 
 
-                    </div>
-
-                </div> </a>
+                    </div> </a>
 
 
+                <a href="dasom.html">
+                    <div class="box four">
 
+                        <div class="fourhover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> dasom </span></div>
+                                <div><span class="categoryfont">web / branding </span></div>
+                            </div>
 
-
-            <a href="gvideo.html">
-                <div class="box seven">
-
-                    <div class="sevenhover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> gvideo </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
                         </div>
 
-                    </div>
 
-                </div> </a>
+                    </div> </a>
 
 
-            <a href="dasomis.html">
-                <div class="box eight">
+                <a href="sopoong.html">
+                    <div class="box five">
 
-                    <div class="eighthover x-align-middle">
-                        <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> dasom is </span></div>
-                            <div><span class="categoryfont">motion graphic </span></div>
+                        <div class="fivehover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> sopoong in seoul </span></div>
+                                <div><span class="categoryfont">app / branding </span></div>
+                            </div>
+
+
                         </div>
 
-                    </div>
-
-                </div> </a>
+                    </div> </a>
 
 
 
 
 
-        </div>
+                <a href="gvideo.html">
+                    <div class="box seven">
+
+                        <div class="sevenhover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> gvideo </span></div>
+                                <div><span class="categoryfont">motion graphic </span></div>
+                            </div>
+
+                        </div>
+
+                    </div> </a>
+
+
+                <a href="dasomis.html">
+                    <div class="box eight">
+
+                        <div class="eighthover x-align-middle">
+                            <div class="x-align-block text-padding">
+                                <div><span class="titlefont"> dasom is </span></div>
+                                <div><span class="categoryfont">motion graphic </span></div>
+                            </div>
+
+                        </div>
+
+                    </div> </a>
+
+
+
+
+
+            </div>
 
     </section>
 
