--- a/sopoong.html
+++ b/sopoong.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div class="works"></div>
+    <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
     <div class="right"><a href="gvideo.html"><img src="images/right.svg"></a></div>
 </div>
@@ -78,7 +78,7 @@
     </div>
 
 
-    <div class="works2"></div>
+    <div class="works2"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
 
 </div>
 
