--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@ UI / GUI  디자인에 관심이 많아 학교 수업 외에 창업 동아리에
                 <a href="whoop.html">
                     <div class="twohover x-align-middle">
                         <div class="x-align-block text-padding">
-                            <div><span class="titlefont"> mari </span></div>
+                            <div><span class="titlefont"> whoop </span></div>
                             <div><span class="categoryfont">app design </span></div>
                         </div>
 
