--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <!DOCTYPE html>
 <html>
-
+<link rel="shortcut icon" href="images/symbol-01.png">
+<title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
