--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,10 @@
 
 <!DOCTYPE html>
 <html>
-
+<link rel="shortcut icon" href="images/symbol-01.png">
+<title>Hello! Dasom</title>
+<link rel="shortcut icon" href="images/symbol-01.png">
+<title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <head lang="en">
