--- a/petfit.html
+++ b/petfit.html
@@ -1,4 +1,6 @@
 <html>
+<link rel="shortcut icon" href="images/symbol-01.png">
+<title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
